# NintendoCodingChallenges

./: CMakeLists.txt  README.md
include/hireme/: algorithm.h  common.h  custom.h  helpers.h
src/hireme/: algorithm.cpp  custom.cpp  helpers.cpp  main.cpp
